pantalla de items por lista

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,4 +22,6 @@
     <string name="addBtn">Añadir</string>
     <string name="seeBtn">Ver</string>
     <string name="deleteBtn">Eliminar</string>
+    <string name="reserBtn">Reserve</string>
+    <string name="shareBtn">Reserve</string>
 </resources>
