--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,6 @@
     <string name="addBtn">Add</string>
     <string name="seeBtn">See</string>
     <string name="deleteBtn">Delete</string>
-
-
+    <string name="reserBtn">Reserve</string>
+    <string name="shareBtn">Reserve</string>
 </resources>
