--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,5 @@
     <string name="seeBtn">See</string>
     <string name="deleteBtn">Delete</string>
     <string name="reserBtn">Reserve</string>
-    <string name="shareBtn">Reserve</string>
+    <string name="shareBtn">Share</string>
 </resources>
