arreglos en el UI

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -27,4 +27,5 @@
     <string name="deleteBtn">Eliminar</string>
     <string name="reserBtn">Reservar</string>
     <string name="shareBtn">Compartir</string>
+    <string name="guest">Continue como invitado</string>
 </resources>
