--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="deleteBtn">Delete</string>
     <string name="reserBtn">Reserve</string>
     <string name="shareBtn">Share</string>
+    <string name="guest">Continue as a Guest</string>
 </resources>
